--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 theme: jekyll-theme-slate
 title: "Sionnach's Anki Decks"
-description: "Anki Decks On Languages, Computing and More"
+description: "Sionnach's Collection of Anki Decks On Languages, Computing and More"
 author: "Sionnach"
 show_downloads: false
 github:
